# veritas-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/agents/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/agents/common/: state_wrapper.py
backend/agents/numeric_validation/: agent.py
backend/agents/numeric_validation/.adk/: session.db
backend/agents/numeric_validation/sub_agents/: __init__.py
backend/agents/numeric_validation/sub_agents/.adk/: session.db
backend/agents/numeric_validation/sub_agents/extractor/: prompt.py
backend/agents/numeric_validation/sub_agents/fan_out_verifier/: __init__.py  agent.py  prompt.py  schema.py  verifier.py
backend/agents/numeric_validation/sub_agents/planner/: __init__.py  agent.py  prompt.py  schema.py
backend/agents/numeric_validation/sub_agents/reviewer/: prompt.py
backend/agents/numeric_validation/sub_agents/verifier/: __init__.py  agent.py  schema.py
backend/agents/numeric_validation/tests/: test_agent.py  test_extractor_sub_agent.py  test_fan_out_verifier.py  test_pipeline.py  test_reviewer.py  test_root_agent.py  test_verifier_sub_agent.py
backend/agents/numeric_validation/tests/.adk/: session.db
backend/agents/orchestrator/: __init__.py  agent.py
backend/agents/orchestrator/sub_agents/: __init__.py
backend/agents/orchestrator/sub_agents/disclosure_compliance/: agent.py
backend/agents/orchestrator/sub_agents/external_signal/: __init__.py  agent.py  deep_research_client.py  prompt.py  schema.py
backend/agents/tests/integration/: test_veritas_ai_agent.py
backend/agents/tests/unit/: test_audit_orchestrator_callbacks.py  test_document_markdown_plugin.py  test_error_handler.py
backend/agents/veritas_ai_agent/: __init__.py  agent.py  fast_api_app.py  schemas.py
backend/agents/veritas_ai_agent/app_utils/: coordination_plugin.py  document_markdown_plugin.py  error_handler.py  llm_config.py  state_wrapper.py  telemetry.py  typing.py
backend/agents/veritas_ai_agent/data/: ifrs_disclosure_checklist.yaml
backend/agents/veritas_ai_agent/shared/: agent_selection_plugin.py  callbacks.py  coordination_plugin.py  debug_plugin.py  document_markdown_plugin.py  error_handler.py  file_logging_plugin.py  llm_config.py  model_config.py  model_name_config.py  rate_limiter.py
backend/agents/veritas_ai_agent/sub_agents/: __init__.py
backend/agents_backup/: __init__.py
backend/agents_backup/common/: error_handler.py
backend/agents_backup/orchestrator/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 063e0da43d5f_initial_schema.py  1333a39d8e09_add_name_to_jobs.py  16a982348b6f_add_enabled_agents_to_jobs.py  48bd05d0f731_rename_findings_to_agent_results.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/routes/: __init__.py  documents.py  health.py  jobs.py  websockets.py
backend/app/models/: __init__.py  base.py  document.py  finding.py  job.py
backend/app/schemas/: __init__.py  agent_outputs.py  document.py  finding.py  job.py  websocket.py
backend/app/services/: __init__.py  adapters.py  dummy_agent_service.py  extractor.py  processor.py  storage.py  websocket_manager.py
backend/app/services/agents/: __init__.py  client.py  planner.py
backend/app/services/dummy_agent/: README.md  __init__.py  dummy_agent_service.py  dummy_events.json
backend/app/utils/: validators.py
backend/scripts/: convert_ifrs_excel_to_yaml.py  deploy.sh  deploy_infra.sh  docx_extraction.py  teardown.sh  test_planner.py
backend/tests/: test_agent_selection.py  test_crud_endpoints.py  test_document_upload.py  test_extractor.py  test_grid_utils.py  test_plugins.py  test_processor_contract.py  test_validators.py
(+423 files in other folders)
